@@ -59,6 +59,11 @@
       <include name="hadoop-*-test.jar"/>
     </fileset>
 
+    <fileset dir="${hadoop.home}/build">
+      <include name="hadoop-*-core.jar"/>
+      <include name="hadoop-*-test.jar"/>
+    </fileset>
+
     <fileset dir="${hadoop.home}/lib">
       <include name="*.jar"/>
       <exclude name="**/junit*"/>
